create api address and swagger update
